--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,113 @@
+@font-face {
+	font-family: "Noto";
+	src: local("Noto"),
+	url('./assets/fonts/NotoSans.ttf') format('truetype');
+}
+
+@font-face {
+	font-family: "NotoItalic";
+	src: local("NotoItalic"),
+	url('./assets/fonts/NotoSansItalic.ttf') format('truetype');
+	font-weight: soft;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif;
   margin: auto;
   max-width: 38rem;
   padding: 2rem;
+  background-color: #0f1014;
 }
+
+.title {
+	font-family: "Noto";
+	font-weight: 1000;
+	font-size: 60px;
+	color: #ffffff;
+}
+
+.titleHighlight {
+	color: #91ffda;
+}
+
+.navbar {
+	display: flex;
+	flex-direction: row;
+}
+
+.navTab {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	font-weight: 500;
+	font-family: "Noto";
+	font-size: 20px;
+	width: 100%;
+	padding: 10px 15px;
+	position: relative;
+	background: none;
+	cursor: pointer;
+	height: 24px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex: 1;
+	min-width: 0;
+	user-select: none;
+	color: #ffffff;
+}
+
+.navUnderline {
+	height: 2px;
+	background: #91ffda;
+	position: absolute;
+	left: 20px;
+	right: 20px;
+	bottom: 0;
+}
+
+.rollDisplay {
+	list-style: none;
+	display: flex;
+	justify-content: center;
+	gap: 30px;
+	flex: 0;
+	margin: 0;
+	padding: 0;
+	margin-bottom: 10px;
+	margin-top: 10vh;
+	text-align: center;
+	/*border: 1px solid red;*/
+}
+
+.rollDisplay li {
+	width: 30px;
+	height: 30px;
+	border-radius: 30px;
+	display: block;
+	background-color: #91ffda;
+	flex: 0 0 40px;
+}
+
+.rollResult {
+	font-family: "Noto";
+	font-weight: 600;
+	font-size: 40px;
+	color: #ffffff;
+	margin-top: 0px;
+}
+
+.rollBtn {
+    /*background-color: #91f2ff;*/
+    background-color: #91ffda;
+    border-radius: 10px;
+    padding: 10px 20px;
+    color: #0f1014;
+	font-family: "Noto";
+	font-weight: 500;
+	font-size: 20px;
+	width: 150px;
+	border: none;
+}
+
