--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@ body {
     Arial, sans-serif;
   margin: auto;
   max-width: 38rem;
-  padding: 2rem;
+  padding: 0rem;
   background-color: #0f1014;
 }
 
@@ -40,6 +40,7 @@ body {
 	list-style: none;
 	padding: 0;
 	margin: 0;
+	margin-top: 5rem;
 	font-weight: 500;
 	font-family: "Noto";
 	font-size: 20px;
@@ -53,7 +54,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	flex: 1;
-	min-width: 0;
+	min-width: 20px;
 	user-select: none;
 	color: #ffffff;
 }
@@ -65,6 +66,7 @@ body {
 	left: 20px;
 	right: 20px;
 	bottom: 0;
+	margin-top: 5rem;
 }
 
 .rollDisplay {
